# ros2_ws

./: README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/Stage/lib/: libstage.so.4.3.0
install/lol_nav/share/lol_nav/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lol_nav/share/lol_nav/cmake/: lol_navConfig.cmake
install/lol_nav/share/lol_nav/launch/: bringup_nav.launch.py  bringup_nav.launch.py   nav2.launch.py  slam.launch.py  stage_world.launch.py
install/lol_nav/share/lol_nav/rviz/: nav2_config.rviz
install/moveit_task_constructor_visualization/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
log/: latest_build
src/P1_ej1_pub/: package.xml  setup.cfg  setup.py
src/P1_ej1_sub/: package.xml  setup.cfg  setup.py
src/auto_mover/: setup.cfg  setup.py
src/auto_mover/auto_mover/: move_node.py
src/cam_viewer/: calibration.yaml  package.xml  setup.cfg  setup.py
src/ejemplo_uno/: package.xml  setup.cfg  setup.py
src/ejercicio1_pkg/: setup.py
src/ejercicio_dos/: setup.cfg  setup.py
src/ejercicio_tres_client/: setup.cfg  setup.py
src/ejercicio_tres_interface/: CMakeLists.txt  package.xml
src/ejercicio_tres_server/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/mma_interfaces/: CMakeLists.txt
src/mma_listener/: package.xml  setup.cfg  setup.py
src/mma_service/: setup.cfg  setup.py
src/mma_talker/: setup.cfg  setup.py
src/my_package/: setup.py
src/my_stage_mover/: setup.cfg  setup.py
src/nodo_adc_sub/: package.xml  setup.cfg  setup.py
src/p1_ej2_interface/: CMakeLists.txt
src/p1_ej2_nodo4/: package.xml  setup.cfg  setup.py
src/p1_ej2_nodo5/: package.xml  setup.cfg  setup.py
src/p1_ej2_nodos_sensor/: package.xml  setup.cfg  setup.py
src/p1_ej3_cliente/: setup.cfg  setup.py
src/p1_ej3_interface/: CMakeLists.txt  package.xml
src/p1_ej3_servidor/: package.xml  setup.cfg  setup.py
src/p2_ej2/: CMakeLists.txt  package.xml
src/p2_ej2/src/: panda_ik_menu.cpp
src/p2_ej3/: package.xml  setup.cfg  setup.py
src/pico_control_pub/: setup.cfg  setup.py
src/robot_autonomo/: package.xml  setup.cfg  setup.py
src/robot_nav/: package.xml  setup.py
src/robot_trr/: CMakeLists.txt  package.xml
src/stage_worlds/: CMakeLists.txt  package.xml
src/stage_worlds/worlds/: lol_map1.world  mapa_parcial.world  mi_mundo.world
src/stage_worlds/worlds/include/: robots.inc
src/trr_robot/: CMakeLists.txt
src/trr_robot_ps/: setup.cfg  setup.py
(+934 files in other folders)
