<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stage_worlds</name>
  <version>0.0.0</version>
  <description>Stage world files for custom simulation</description>
  <maintainer email="aergio74@gmail.com">sergio</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
